Add outliner and split files

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,9 +1,11 @@
+$material-design-icons-font-directory-path: '~material-design-icons-iconfont/dist/fonts/'
 
-.cursor-polygon-draw
-  border: solid 1px cyan
-  border-radius: 50%
-  position: absolute
-  pointer-events: none
+@import '~material-design-icons-iconfont/src/material-design-icons'
+ 
+@tailwind base
+@tailwind components
+@tailwind utilities
+
 
 .data-tree
-  position: fixed
+  top: 100px
