--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,6 +1,6 @@
 $material-design-icons-font-directory-path: '~material-design-icons-iconfont/dist/fonts/'
 
-@import '~material-design-icons-iconfont/src/material-design-icons'
+/* @import '~material-design-icons-iconfont/src/material-design-icons'
  
 @tailwind base
 @tailwind components
