Update the data viewer and editor

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -6,6 +6,17 @@ $material-design-icons-font-directory-path: '~material-design-icons-iconfont/dis
 @tailwind components
 @tailwind utilities
 
+html
+  overflow: hidden
 
-.data-tree
-  top: 100px
+body
+  overflow: hidden
+
+.h-1-4
+  height: 25%
+
+.h-3-4
+  height: 75%
+
+button:focus
+  outline: none
