--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -12,6 +12,12 @@ html
 body
   overflow: hidden
 
+.h-1-3
+  height: 33.3333%
+
+.h-2-3
+  height: 66.6666%
+
 .h-1-4
   height: 25%
 
@@ -20,3 +26,23 @@ body
 
 button:focus
   outline: none
+
+input[type='range']
+  /* overflow: hidden
+  -webkit-appearance: none
+  background: #1A202C
+  outline: none
+
+input[type='range']::-webkit-slider-runnable-track
+  height: 10px
+  -webkit-appearance: none
+  color: #2D3748
+  margin-top: -5px
+
+input[type='range']::-webkit-slider-thumb
+  width: 15px
+  -webkit-appearance: none
+  height: 15px
+  border-radius: 50%
+  cursor: ew-resize
+  background: #319795
